Fix background tiling on small screen

--- a/style/base.css
+++ b/style/base.css
@@ -15,7 +15,7 @@ body {
     padding: 1rem;
     max-width: 960px;
     background-color: gray;
-    background-image: url("./../images/zeke-tucker-0EP4QyCjtgE-unsplash.jpg");
+    background-image: url("./../images/zeke-tucker-0EP4QyCjtgE-unsplash-cropped.jpg");
     background-position: center;
     background-size: cover;
     display: flex;
